force-app/main/default/objects/PropiedadesIntegracion__c/PropiedadesIntegracion__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Propiedades integración</description>
    <label>PropiedadesIntegracion</label>
</CustomObject>