force-app/main/default/objects/PropiedadesIntegracion__c/fields/API_KEY_BABONLAB__c.field-meta.xml
<CustomField>
    <fullName>API_KEY_BABONLAB__c</fullName>
    <label>API_KEY_BABONLAB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>