force-app/main/default/objects/PropiedadesIntegracion__c/fields/CustomerCodeIdealista__c.field-meta.xml
<CustomField>
    <fullName>CustomerCodeIdealista__c</fullName>
    <label>Customer Code Idealista</label>
    <length>43</length>
    <type>Text</type>
</CustomField>