force-app/main/default/objects/PropiedadesIntegracion__c/fields/ILC_IDEALISTA__c.field-meta.xml
<CustomField>
    <fullName>ILC_IDEALISTA__c</fullName>
    <label>ILC_IDEALISTA</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>