force-app/main/default/objects/PropiedadesIntegracion__c/fields/NumDiasLeadFotocasa__c.field-meta.xml
<CustomField>
    <fullName>NumDiasLeadFotocasa__c</fullName>
    <label>NumDiasLeadFotocasa</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>