force-app/main/default/objects/PropiedadesIntegracion__c/fields/PasswordAMLCHECK__c.field-meta.xml
<CustomField>
    <fullName>PasswordAMLCHECK__c</fullName>
    <label>PasswordAMLCHECK</label>
    <length>50</length>
    <type>Text</type>
</CustomField>