force-app/main/default/objects/PropiedadesIntegracion__c/fields/PasswordLeadFotocasa__c.field-meta.xml
<CustomField>
    <fullName>PasswordLeadFotocasa__c</fullName>
    <label>PasswordLeadFotocasa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>