force-app/main/default/objects/PropiedadesIntegracion__c/fields/passwordPruebas__c.field-meta.xml
<CustomField>
    <fullName>passwordPruebas__c</fullName>
    <label>Password Pruebas</label>
    <length>32</length>
    <type>Text</type>
</CustomField>