force-app/main/default/objects/PropiedadesIntegracion__c/fields/PasswordWSAvintia__c.field-meta.xml
<CustomField>
    <fullName>PasswordWSAvintia__c</fullName>
    <label>PasswordWSAvintia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>