force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_AMLCHECK__c.field-meta.xml
<CustomField>
    <fullName>URL_AMLCHECK__c</fullName>
    <label>URL_AMLCHECK</label>
    <type>Url</type>
</CustomField>