force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_BABONLAB_PROMOCION__c.field-meta.xml
<CustomField>
    <fullName>URL_BABONLAB_PROMOCION__c</fullName>
    <label>URL_BABONLAB_PROMOCION</label>
    <type>Url</type>
</CustomField>