force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_BABONLAB_VIVIENDAS__c.field-meta.xml
<CustomField>
    <fullName>URL_BABONLAB_VIVIENDAS__c</fullName>
    <label>URL_BABONLAB_VIVIENDAS</label>
    <type>Url</type>
</CustomField>