force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_FOTOCASA__c.field-meta.xml
<CustomField>
    <fullName>URL_FOTOCASA__c</fullName>
    <label>URL_FOTOCASA</label>
    <type>Url</type>
</CustomField>