force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_IDEALISTA__c.field-meta.xml
<CustomField>
    <fullName>URL_IDEALISTA__c</fullName>
    <label>URL_IDEALISTA</label>
    <type>Url</type>
</CustomField>