force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_WEBAVINTIA__c.field-meta.xml
<CustomField>
    <fullName>URL_WEBAVINTIA__c</fullName>
    <label>URL_WEBAVINTIA</label>
    <type>Url</type>
</CustomField>