force-app/main/default/objects/PropiedadesIntegracion__c/fields/URL_WEBAVINTIA_PRO__c.field-meta.xml
<CustomField>
    <fullName>URL_WEBAVINTIA_PRO__c</fullName>
    <label>URL_WEBAVINTIA_PRO</label>
    <type>Url</type>
</CustomField>