force-app/main/default/objects/PropiedadesIntegracion__c/fields/URLDocuemntos__c.field-meta.xml
<CustomField>
    <fullName>URLDocuemntos__c</fullName>
    <label>URLDocuemntos</label>
    <type>Url</type>
</CustomField>