force-app/main/default/objects/PropiedadesIntegracion__c/fields/usernamePruebas__c.field-meta.xml
<CustomField>
    <fullName>usernamePruebas__c</fullName>
    <label>Username Pruebas</label>
    <length>32</length>
    <type>Text</type>
</CustomField>