force-app/main/default/objects/PropiedadesIntegracion__c/fields/UsuarioAMLCHECK__c.field-meta.xml
<CustomField>
    <fullName>UsuarioAMLCHECK__c</fullName>
    <label>UsuarioAMLCHECK</label>
    <length>10</length>
    <type>Text</type>
</CustomField>