force-app/main/default/objects/PropiedadesIntegracion__c/fields/UsuarioLeadFotocasa__c.field-meta.xml
<CustomField>
    <fullName>UsuarioLeadFotocasa__c</fullName>
    <label>UsuarioLeadFotocasa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>